# rust-win32api-samples

./: LICENSE  README.md
background-keyboard-inputs/: Cargo.toml  README.md
background-keyboard-inputs/src/: main.rs
direct2d-example-2022/: Cargo.toml  README.md
direct2d-example-2022/src/: main.rs
keyboard-events/: Cargo.toml  README.md
keyboard-events/src/: main.rs
minimize-all-windows/: Cargo.toml  README.md
minimize-all-windows/src/: main.rs
show-display-settings/: Cargo.toml  README.md
show-display-settings/src/: main.rs
show-fonts/: Cargo.toml  README.md
show-fonts/src/: main.rs
